--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <title>Html Crash</title>
 </head>
 <body>
-    <h1>New Website</h1>
-    <h2>Newwww!!!</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <h1>New <strong>Moses</strong> Website</h1>
+    <h2>Newwww!!! </h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing <em>elitsd</em> elit.</p>
+
+    <a href="#">Home</a>
+
+    <div>
+        <ul>
+            <li>Moses</li>
+            <li>Asuga</li>
+            <li>Mogaka</li>
+        </ul>
+    </div>
+    
 </body>
 </html>
