--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Newwww!!! </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing <em>elitsd</em> elit.</p>
 
-    <a href="#">Home</a>
+    <a href="about.html">About</a>
 
     <div>
         <ul>
@@ -19,6 +19,6 @@
             <li>Mogaka</li>
         </ul>
     </div>
-    
+
 </body>
 </html>
