--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
         </ul>
     </div>
 
+    <p style="color: orangered">style me :)</p>
+
+    <!-- This is a comment -->
+
 </body>
 </html>
