--- a/index.html
+++ b/index.html
@@ -23,6 +23,30 @@
     <p style="color: orangered">style me :)</p>
 
     <!-- This is a comment -->
+    <div>
+        <form action="">
+            <label for="username">Enter Username:</label>
+            <input type="text" id="username">
+            <br> <br>
+
+            <label for="email">Enter Email:</label>
+            <input type="email" name="" id="email">
+            <br> <br>
+
+            <label for="pass">Enter Password:</label>
+            <input type="password" name="" id="pass">
+        </form>
+    </div>
+    
+
+    <div>
+        <form action="">
+            <input type="radio" name="gender" id="male">Male <br>
+            <input type="radio" name="gender" id="female">Female <br>
+            <input type="radio" name="gender" id="other">Other <br>
+        </form>
+    </div>
+    
 
 </body>
 </html>
