--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <label for="pass">Enter Password:</label>
             <input type="password" name="" id="pass">
         </form>
-    </div>
-    
+    </div>    
 
     <div>
         <form action="">
+            <p>Select your gender;</p> <br> 
             <input type="radio" name="gender" id="male">Male <br>
             <input type="radio" name="gender" id="female">Female <br>
             <input type="radio" name="gender" id="other">Other <br>
